# ark-infra

./: 0305advice.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  codex.md  deep-research-report.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: audit.rs  diag.rs  doctor.rs  hub_forwarder.rs  ipc.rs  main.rs  metrics.rs
agent/src/exec/: action.rs  executor.rs  fix_engine.rs  mod.rs
agent/src/plugin/: mod.rs
agent/src/scene/: analyzer.rs  checkpoint_timeout.rs  gpu_oom.rs  gpu_util_low.rs  mod.rs  network_stall.rs  npu_subhealth.rs  process_crash.rs  storage_io_error.rs  storage_slow.rs  types.rs  workload_stalled.rs
charts/ark-infra/: Chart.yaml  README.md  values.yaml
core/: Cargo.toml
core/src/: event.rs  graph.rs  lib.rs
core/tests/: catalog_lint.rs  rules_fixtures.rs  rules_package_validation.rs
deploy/: README.md  crd-ark-remediation-request.yaml  hub-deployment.yaml  kustomization.yaml  operator-remediation-sample.yaml  rbac.yaml
docs/: API_SCHEMAS.md  ARCHITECTURE.md  COMPATIBILITY_MATRIX.md  ENGINEERING_PLAN.md  EVENT_PROTOCOL.md  EXECUTION_PLAN.md  INCIDENT_CATALOG.md  INDEX.md  PERFORMANCE.md  RULES_ENGINE.md  SIGNALS.md  WORKSPACE_ARCHITECTURE.md  quickstart.md
examples/: README.md  ark-probe-rdma-mock.py
hub/: Cargo.toml
hub/src/: dedup.rs  k8s_controller.rs  main.rs  metrics.rs  wal.rs
rules/: manifest.yaml  network-stall.yaml  rdma-pfc-storm.yaml  rdma-physical-degradation.yaml
rules/cluster/: cascade-failure.yaml
rules/hardware/: gpu-ecc-error.yaml  gpu-throttle.yaml
rules/interconnect/: nvlink-error.yaml  (+1 more)
scripts/: check-doc-index.sh  check-doc-links.sh  check-rules-change.sh  run-demo.sh
(+50 files in other folders)
