[workspace]
members = ["core", "agent", "hub"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
colored = "2.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"

[workspace.package]
version = "0.1.0"
edition = "2021"
