[package]
name = "ark"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
ark-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
prometheus = "0.13"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
