[package]
name = "ark-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ark-hub"
path = "src/main.rs"

[dependencies]
ark-core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
warp = "0.3"
dashmap = "6.1"
prometheus = "0.13"
kube = { version = "0.88", features = ["runtime", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_25"] }